@startuml customModelFields

class CustomModelField<T> {

}

class ArrayInputField<T> {
    + value: T[]
    + numberOfInputs: number
}

class BooleanModelField {
    + value: Boolean
}

class DateModelField {
    + value: Date
    + displayTime: boolean;
    
    + {static} formatFromApi(date): Date
    + {static} formatDateTimeFromApi(date): Date
    + formatForApi() : any
    + formatDateTimeForApi(): any
}

class FileModelField {
    + value: string
    + uploadPath: string
    + fileUrlField: string
    + acceptedTypes: string[]
}

class MultipleObjectsModelField<CustomModel> {
    + value: CustomModel[]
    + displayTableFunction: Function
    + displayModalFunction: Function
}

class MutlipleSelectModelField {
    + value: CustomModel[]
    + maxSelectionLength: number
    + formatForApi() : any
}

class NestedFieldModelField {
    + value: any
    + childrenObject: string
    + childrenFieldName: string
    + isPassword: boolean
    + apiLabel: string
}

class NumberModelField {
    + value: number
    + displayValue: string
}

class ObjectModelField<CustomModel> {
    + value: CustomModel
    + displayTableFunction: Function
    + displayModalFunction: Function
}

class SelectModelField {
    + bindField: string
    + options: CustomModel[]
    + apiLabel: string
    + isTranslatable: boolean
}

class SingleSelectModelField<CustomModel> {
    + value: CustomModel
    + formatForApi(): any
}

class TextModelField {
    + value: string
    + isLongText: boolean
    + isPassword: boolean
    + isColor: boolean
    + isFont: boolean
    + displayValue: string
    + isTranslatable: boolean
}

CustomModelField <|-left- ArrayInputField
CustomModelField <|-left- BooleanModelField
CustomModelField <|-right- DateModelField
CustomModelField <|-right- FileModelField
CustomModelField <|-up- NestedFieldModelField
CustomModelField <|-up- NumberModelField
CustomModelField <|-down- ObjectModelField
CustomModelField <|-down- MultipleObjectsModelField
CustomModelField <|-up- SelectModelField
CustomModelField <|-down- TextModelField
SelectModelField <|-up- SingleSelectModelField
SelectModelField <|-up- MutlipleSelectModelField

@enduml